# overlay

./: README.md  index.html  package-lock.json  package.json
src/: App.vue  elems.ts  main.ts  scene.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  maths.rs  read.rs  types.rs
src/compts/: PanelItem.vue
src/cores/: atom.ts  bond.ts  label.ts  line.ts  mole.ts
src/pages/: HelpPage.vue  HomePage.vue
src/router/: index.ts
