[package]
name = "overlay"
version = "0.1.0"
description = "分子重叠"
authors = ["Xiaofei Shi"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[profile.dev]
incremental = true

[profile.release]
lto = true
opt-level = 3
strip = true      # Ensures debug symbols are removed.
codegen-units = 1
panic = "abort"   # Higher performance by disabling panic handlers.

[build-dependencies]
tauri-build = { version = "2.2.0", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.5.0", features = ["protocol-asset"] }
tauri-plugin-log = "2.0.0-rc"
opener = "0.8.2"
tauri-plugin-dialog = "2"
regex = "1.12.2"
